Speech functionality (#69)
* Replaced java.nio, small fixes

* Moved FixLayout to core_utils

* Replaced java.nio in gui
Added "editable" to TextField control
Fixed bug with updating panels before showing them
Fixed bug with not showing character after hiding
Fixed bug with freezing at tray initialization

* Simple dialog system
1. Space-based intent exchange
2. Improved naive intent classifier
3. Added naive character classifier
4. Added perceptron and perceptron character classifier
5. Changed "say something" command to use special list
6. Added dialog debug form
7. Refactoring
8. Updated phrases

* Dialog logs for learning

* Forgot to push perceptron
Fixed bugs

* Fixed bug with blacklisting

* Fixed some bugs

* Message wrappers
Javadocs
Weather and Chat plugins rewritten on Kotlin with new wrappers

* Fixed bug with character animation
Fixed bug with freezing on tray loading
Optimized dialog modules initialization
Added Fahrenheit temperature scale to weather plugin
Weather plugin now saves current weather to prevent ban on weather server because of often requests
Weather plugin localization

* TagsMap little refactoring, fixed bug with empty chat

* Refactored phrase requesting, added some tests, core:set-persistent

* GUI Events docs, some improvements on messages constructors

* Core utils tests, some refactoring

* Scrolling in notifications

* More tests, removed outdated logs, dialog refactoring

* Notification manager rewritten on Kotlin

* Phrase blocks

* Fixed tests